Fri Jun  7 18:58:56 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (numberof): Gathered from various files.

	* array.c, math.c, thread_pthread.c, iseq.c, enum.c, string.c, io.c,
	  load.c, compile.c, struct.c, eval.c, gc.c, parse.y, process.c,
	  error.c, ruby.c: Remove the definitions of numberof.

Fri Jun  7 18:24:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_size): Declare a variable, i, just before used
	  to suppress a warning.
	  (rb_int_export): Ditto.

Fri Jun  7 17:41:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* bignum.c (rb_absint_size): explicit cast to BDIGIT to avoid implicit
	  64 bit to 32 bit shortening warning
	* bignum.c (rb_int_export): ditto
	* bignum.c (int_import_push_bits): ditto

Fri Jun  7 17:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* internal.h (RCLASS_SUPER): use descriptive variable name
	* internal.h (RCLASS_SET_SUPER): ditto

Fri Jun  7 13:25:27 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/fbuffer/fbuffer.h (fbuffer_append_str): change the place of
	  RB_GC_GUARD. it should be after the object is used.

Fri Jun  7 13:22:43 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (before_gc_sweep): noinline can also avoid the segv instead of
	  -O0 of r41084. this way is expected less slow.

Fri Jun  7 11:45:42 2013  Kenta Murata  <mrkn@cookpad.com>

	* rational.c (numeric_quo): move num_quo in numeric.c to numeric_quo
	  in rational.c to refer canonicalization state for mathn support.
	  [ruby-core:41575] [Bug #5736]

	* numeric.c (num_quo): ditto.

	* test/test_mathn.rb: add a test for the change at r41109.

Fri Jun  7 11:41:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: revert r41106.  size_t may not be unsigned

	* bignum.c (rb_absint_size_in_word, rb_int_export, rb_int_import): use
	  NUM2SIZET() and SIZET2NUM() already defined in ruby/ruby.h.

Fri Jun  7 11:28:37 2013  Masaya Tarui  <tarui@ruby-lang.org>
